# fc-admin

./: .gitignore  .gitmodules  COPYING  COPYING.BSD3  Makefile  Makefile.am  Makefile.setup  README  autogen.sh  configure.ac  fleet-commander-admin.spec  fleet-commander-logger.spec  fleet-commander.spec  gsettings-logger.c  gsettings-logger.py  package-requirements.txt  pylint_plugins.py  pylintrc  pyproject.toml  server.py
admin/: Makefile.am  admin.wsgi  fleet-commander-admin.py  fleet_commander_admin.py  server.py
admin/cockpit/: index.html
admin/cockpit/css/: main.css
admin/cockpit/fleet-commander-admin/: .eslintignore  .eslintrc.json  index.html  livesession.html  manifest.json  package.json
admin/cockpit/fleet-commander-admin/css/: main.css
admin/cockpit/fleet-commander-admin/js/: base.js  collectors.js  dialogs.js  fcdbusclient.js  fcspiceclient.js  goa.js  highlightedapps.js  index.js  livesession.js
admin/cockpit/js/: fcdbusclient.js  goa.js  index.js
admin/css/: main.css  profile.livesession.css
admin/fleetcommander/: __init__.py  __main__.py  admin.py  adminwsgiref.py  collectors.py  constants.py.in  controller.py  database.py  fcad.py  fcdbus.py  fcfreeipa.py  flaskless.py  freeipa.py  goa.py  libvirtcontroller.py  mergers.py  phial.py  profiles.py  sshcontroller.py  utils.py  wsmanagers.py
admin/js/: deploy.js  favourites.js  index.js  main.js  new_profile.js  profile.add.js  profiles.livesession.js  spice_debug_bypass.js
admin/profiles/: index.json.sample
admin/templates/: deploy.html  index.html  new_profile.html  profile.add.html  profile.favourites.html  profile_add.html  profiles.livesession.html
cockpit/: index.html  livesession.html  manifest.json
cockpit/css/: main.css
cockpit/js/: base.js  fcdbusclient.js  fcspiceclient.js  index.js  livesession.js
data/: 81-fleet-commander-logger.rules  Makefile.am  fc-admin-standalone  fc-admin-standalone.in  fc-goa-providers.ini  fc-gsettings-logger.desktop  firefox-bookmark-fclogger.in  firefox_bookmark_fclogger.json.in  fleet-commander-admin.conf.in  fleet-commander-admin.in  fleet-commander-admin.service.in  fleet-commander-apache.conf.in  fleet-commander-controller.conf  fleet-commander-controller.conf.in  fleet-commander-controller.service.in  fleet-commander-dbus.service.in  fleet-commander-logger  fleet-commander-logger.conf  fleet-commander-logger.desktop.in  fleet-commander-logger.in  fleet-commander-standalone.in  fleet-commander-vnc-session.service.in  gnome-software-service.desktop  goa-providers.conf  monitors.xml  org.freedesktop.FleetCommander.admin.metainfo.xml  org.freedesktop.FleetCommander.conf  org.freedesktop.FleetCommander.service.in
js/: new_profile.js
logger/: Makefile  Makefile.am  fc-gsettings-logger.c  fcmdr-logger.py  firefox_bookmark_fclogger.py  fleet_commander_logger.js  fleet_commander_logger.py  {c73e87a7-b5a1-4b6f-b10b-0bd70241a64d}.xpi
logger/data/: fcmdr-logger.desktop
logger/firefox-extension/: bookmarklogger.js  manifest.json
logger/firefox-extension/nativeapp/: firefox_bookmark_logger.json  firefox_bookmark_logger.py
profiles/: index.json
server/: server.py  spice-session.py  spice_session.py
server/css/: main.css
server/js/: deploy.js  main.js  new_profile.js
server/profiles/: index.json  rhughes-copr-gnome-3-12.json  simple.json
server/templates/: deploy.html  index.html  new_profile.html
templates/: index.html  new_profile.html
tests/: 00_controller.py  00_database.py  00_fcad.py  00_freeipa.py  00_profilemanager.py  00_sshcontroller.py  01_collectors.py  01_logger.js  01_logger.sh  01_logger_dconf.sh  01_logger_gsettings.sh  01_mergers.py  02_logger_connmgr.js  02_logger_connmgr.py  03_logger_chromium.js  03_logger_chromium.py  03_logger_firefox.js  03_logger_firefox.py  03_logger_goa.js  03_logger_nm.js  03_logger_nm.py  03_logger_nm.sh  04_admin.py  04_admin_stateless.py  04_libvirt_controller.py  05_admin.py  05_admin_stateful.py  05_fcdbus.py  05_fcdbus.sh  06_database.py  06_libvirt_controller.py  06_logger_devfile.js  07_admin.py  07_admin.sh  Makefile.am  _01_logger_test_suite.js  _01_logger_test_suite.py  _01_mock_dbus.py  _01_wait_for_name.py  _03_logger_nm.py  (+35 more)
tests/azure/: azure-pipelines.yml
tests/azure/templates/: build-fedora.yml  configure-fedora.yml  prepare-build-fedora.yml  prepare-lint-fedora.yml  prepare-pylint-fedora.yml  variables-common.yml  variables-fedora.yml
tests/data/: fc_goa_providers_test.conf  fc_goa_providers_test.ini  libvirt_domain-modified-direct-debug.xml  libvirt_domain-modified-direct-plain-debug.xml  libvirt_domain-modified-direct-plain.xml  libvirt_domain-modified-direct.xml  libvirt_domain-modified-html5-debug.xml  libvirt_domain-modified-html5.xml  libvirt_domain-modified.xml  libvirt_domain-nospice.xml  libvirt_domain-orig.xml  test.gschema.xml
tests/data/fleet-commander-logger/: fc-chromium-policies.json
tests/tools/: ip  ssh  ssh-keygen  ssh-keyscan  ssh-session-mock  systemctl  websockify
tools/: Makefile.am  chrome-prefs-extract.py  fcmdr-logger.py  fleet-commander-controller.py  fleet-commander-logger.js  fleet-commander-logger.py  fleet-commander-vnc-session.py  fleet-commander-xinitrc.sh  fleet-commander-xvnc.sh  fleet_commander_controller.py  fleet_commander_logger.js  introspect_goa_providers.c  spice_session.py
