fleet_commander_loggerdir = ${fcloggerpythondir}
fleet_commander_logger_SCRIPTS = \
	fleet_commander_logger.py \
	firefox_bookmark_fclogger.py

fclogger_extension_firefoxdir = ${mozillaextensionsdir}
fclogger_extension_firefox_DATA = {c73e87a7-b5a1-4b6f-b10b-0bd70241a64d}.xpi


EXTRA_DIST = \
		$(fleet_commander_logger_SCRIPTS) \
		$(fclogger_extension_firefox_DATA)