#fcmdr_loggerdir   = ${libexecdir}
#fcmdr_logger_SCRIPTS = fleet-commander-logger.py

fleet_commander_logger_jsdir = ${libexecdir}
fleet_commander_logger_js_SCRIPTS = fleet_commander_logger.js

fleet_commander_controllerdir = ${libexecdir}
fleet_commander_controller_SCRIPTS = fleet_commander_controller.py

fleet_commander_xinitrcdir = ${libexecdir}
fleet_commander_xinitrc_SCRIPTS = fleet-commander-xinitrc.sh

fleet_commander_xvncdir = ${libexecdir}
fleet_commander_xvnc_SCRIPTS = fleet-commander-xvnc.sh

EXTRA_DIST = \
	     $(fleet_commander_logger_js_SCRIPTS)  \
	     $(fleet_commander_xinitrc_SCRIPTS)    \
	     $(fleet_commander_xvnc_SCRIPTS)       \
	     $(fleet_commander_controller_SCRIPTS)
